--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,9 +14,11 @@
     padding: 0;
 }
 html,body {
-    height:100vh;
+    min-width: 100%;
+    min-height: 100%;
     font-size:62.5%;
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 .home{
     font-size:1.7rem;
@@ -24,9 +26,16 @@ html,body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position:top;
-    height:100vh;
+    min-height:100vh;
     position:relative;
-    overflow-x: hidden;
+    overflow: hidden;
+    @media screen and (min-height:350px) and (max-height:450px) {
+
+        min-height:125vh;
+
+        
+    }
+    
 }
 .logo{
     position:absolute;
@@ -41,6 +50,11 @@ html,body {
     top:20rem;
     left:0;
     padding:2rem;
+    @media screen and (min-height:350px) and (max-height:500px) {
+
+        top:6rem;
+        
+    }
 }
 .presentation{
     font-size:1.8rem;
