--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -25,7 +25,7 @@
     &__boxes{
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-evenly;
+        justify-content: space-around;
         margin-top: 1rem;
 
         .contenu{
@@ -44,6 +44,14 @@
                 color:$color-gray;
                 padding: 1rem;
                  border: 3px solid $color-gray;
+                 a{
+                     text-decoration: none;
+                     color:inherit;
+                     font-size: 28px;
+                     &:hover{
+                         color:black;
+                     }
+                 }
             }
             @media screen and (min-width: 769px){
                 &:hover{
