--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,8 +6,6 @@
 @import 'aboutpopup';
 @import 'contact';
 
-
-
 *{
     box-sizing: border-box;
     margin:0;
@@ -22,21 +20,22 @@ html,body {
 }
 .home{
     font-size:1.7rem;
-    background-image: url(../images/leopardDRC2.jpg);
+     background-image: linear-gradient(to right, rgba(65,67,60,.6), rgba(35,37,38,0.6)),
+     url(../images/leopardDRC2.jpg);
+    // background-size: 50% 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position:top;
+    // background-color: rgb(212, 212, 212);
+    // @include sideBarGradient;
     min-height:100vh;
     position:relative;
     overflow: hidden;
     @media screen and (min-height:350px) and (max-height:450px) {
-
-        min-height:125vh;
-
-        
+                    min-height:125vh;
     }
-    
 }
+                                                
 .logo{
     position:absolute;
     top:10px;
@@ -50,16 +49,28 @@ html,body {
     top:20rem;
     left:0;
     padding:2rem;
-    @media screen and (min-height:350px) and (max-height:500px) {
+    //may need to refactor here
 
+    @media screen and (min-height:350px) and (max-height:500px) {
         top:6rem;
-        
+    }
+}
+@keyframes slideLeft{
+    0%{
+        opacity: 0;
+        margin-left: -10%;
+    }
+    100%{
+        opacity: 1;
+        left: 0;
     }
 }
 .presentation{
     font-size:1.8rem;
     color:$color-gray;
-    .title__heading{
+    animation: slideLeft .6s ease-in-out;
+
+    #title__heading{
          margin-left:.5rem;
     }
 }
@@ -87,10 +98,37 @@ html,body {
     border:2px solid black;
     border-radius: 80px;
 }
+.image img{
+    animation: appear .7s ease-in-out;
+}
 
+@keyframes slideUp{
+    0%{
+        opacity: 0;
+        margin-top: 3rem;
+
+    }
+    100%{
+        opacity: 1;
+        margin-top: 1rem;
+    }
+}
+@keyframes appear{
+    0%{
+        opacity: 0;
+
+    }
+    50%{
+        opacity: .4;
+    }
+    100%{
+        opacity: 1;
+    }
+}
 .icons{
    // margin-top:3rem;
    padding:0;
+   animation: slideUp .6s ease-in-out;
     a{
         margin-top:1rem;
         i{
