--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -19,7 +19,40 @@
         
     }
 }
+@keyframes slideLeft{
+    0%{
+        opacity: 0;
+        margin-left: -10%;
+    }
+    100%{
+        opacity: 1;
+        left: 0;
+    }
+}
 
+@keyframes slideUp{
+    0%{
+        opacity: 0;
+        margin-top: 3rem;
+
+    }
+    100%{
+        opacity: 1;
+        margin-top: 1rem;
+    }
+}
+@keyframes appear{
+    0%{
+        opacity: 0;
+
+    }
+    50%{
+        opacity: .4;
+    }
+    100%{
+        opacity: 1;
+    }
+}
 @keyframes textAni{
     0%{
         opacity:0;
@@ -35,44 +68,3 @@
     }
 }
 
-//animation of boxes in section about
-
-@keyframes box-1_ani{
-    0%{
-        opacity:0;
-        transform:translateX(-5rem);
-    }
-    75%{
-        opacity:.8;
-    }
-    100%{
-        opacity:1;
-        transform:translate(0);
-    }
-}
-@keyframes box-3_ani{
-    0%{
-        opacity:0;
-        transform:translateX(5rem);
-    }
-    75%{
-        opacity:.8;
-    }
-    100%{
-        opacity:1;
-        transform:translate(0);
-    }
-}
-@keyframes box-2_ani{
-    0%{
-        opacity:0;
-        transform:translateY(5rem);
-    }
-    75%{
-        opacity:.8;
-    }
-    100%{
-        opacity:1;
-        transform:translate(0);
-    }
-}
