--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,22 +20,17 @@ html,body {
 }
 .home{
     font-size:1.7rem;
-     background-image: linear-gradient(to right, rgba(65,67,60,.6), rgba(35,37,38,0.6)),
-     url(../images/leopardDRC2.jpg);
-    // background-size: 50% 100%;
+    background-image: linear-gradient(to right, rgba(65,67,60,.6), rgba(35,37,38,0.6)),url(../images/leopardDRC2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position:top;
-    // background-color: rgb(212, 212, 212);
-    // @include sideBarGradient;
     min-height:100vh;
     position:relative;
     overflow: hidden;
     @media screen and (min-height:350px) and (max-height:450px) {
                     min-height:125vh;
     }
-}
-                                                
+}                                  
 .logo{
     position:absolute;
     top:10px;
@@ -55,20 +50,10 @@ html,body {
         top:6rem;
     }
 }
-@keyframes slideLeft{
-    0%{
-        opacity: 0;
-        margin-left: -10%;
-    }
-    100%{
-        opacity: 1;
-        left: 0;
-    }
-}
 .presentation{
     font-size:1.8rem;
     color:$color-gray;
-    animation: slideLeft .6s ease-in-out;
+    animation: slideLeft .8s ease-in-out;
 
     #title__heading{
          margin-left:.5rem;
@@ -84,7 +69,6 @@ html,body {
     border-radius:.3rem;
 
     }
-    
     /* Handle */
     ::-webkit-scrollbar-thumb {
     background:$color-gray; 
@@ -99,32 +83,9 @@ html,body {
     border-radius: 80px;
 }
 .image img{
-    animation: appear .7s ease-in-out;
+    animation: appear 1s ease-in-out;
 }
 
-@keyframes slideUp{
-    0%{
-        opacity: 0;
-        margin-top: 3rem;
-
-    }
-    100%{
-        opacity: 1;
-        margin-top: 1rem;
-    }
-}
-@keyframes appear{
-    0%{
-        opacity: 0;
-
-    }
-    50%{
-        opacity: .4;
-    }
-    100%{
-        opacity: 1;
-    }
-}
 .icons{
    // margin-top:3rem;
    padding:0;
@@ -146,7 +107,6 @@ html,body {
             }
             &.fa-linkedin:hover{
                 color:#04669A;
-                
             }
             
             &.fa-github:hover{
@@ -155,7 +115,6 @@ html,body {
         }
     }
 }
-
 .main-footer{
     text-align: center;
     background-color: rgba(black, .9);
@@ -193,10 +152,8 @@ html,body {
                         color:#3B5998;   
                     }
                     &.fa-linkedin:hover{
-                        color:#04669A;
-                        
+                        color:#04669A;   
                     }
-                    
                     &.fa-github:hover{
                         color:black;
                     }
@@ -209,7 +166,6 @@ html,body {
         text-transform: uppercase;
         color:$color-gray;
     }
-    
 }
 //in the end
 @import 'mobile';
