--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,7 @@
 //variables
 
 $color-gray:#888888;
+$color-light-gray: #eee;
 $overlay-color:#232526;
 @mixin sideBarGradient{
     background: #232526;  /* fallback for old browsers */
