--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -22,11 +22,9 @@
         transition:all .5s;
         z-index:100;
     }
-    
     .wrapper{
-         height:65rem;
+         height:70rem;
         position:relative;
-        font-size:1.5rem;
         overflow:hidden;
 
         .project__box{
@@ -34,36 +32,79 @@
             height:50%;
             padding:2rem;
             transition:all .3s ease;
+            font-size: 1.7rem;
             overflow: hidden;
-            & > a{
-                font-size:1.5rem;
-                background-color: $overlay-color;
-                text-transform: uppercase;
-                transition:transform .3s ease;
-
+            a.link-button{
+                position: absolute;
+                border-radius: 1rem;
+                border:.3rem solid #000;
+                font-size: 1.7rem;
+                padding: .5rem;
+                background-color: rgba($color-gray, .2);
+                color:#000;
+                opacity: 0;
+                transition:all .5s ease-in;
                 &:hover{
-                    background-color: $color-gray;
-                    color:$overlay-color;
+                    background-color: $overlay-color;
+                    text-decoration: none;
+                    color: white;
                 }
             }
-            
+            a:nth-of-type(1){
+                    left: 50%;
+                    top: 50%;
+                    transform: translate(-50%,-50%);
+            }
+            a:nth-of-type(2){
+                    left: 51%;
+                    top: 58%;
+                    transform: translate(-58%,-51%);
+            }
+            &:after{
+                content: ' ';
+                position:absolute;
+                left:0;
+                bottom:0;
+                width: 100%;
+                height: 100%;
+                opacity: 0;
+                z-index: -1;
+                background-image:url(../images/portfolio-img-1.jpg) ;
+                background-size: cover;
+                filter: blur(6px);
+                transition: all .5s ease-in-out;
+            }
             &:hover{
                 transform:scale(0.9);
-                box-shadow: .7rem .8rem .8rem rgb(17, 17, 17);
+                box-shadow: .7rem .8rem .8rem rgb(17, 17, 17);                
                 cursor: pointer;
             }
+            &:hover:after{
+                opacity: 1;
+            }
+            &:hover a{
+                opacity: 1;
+            }
             &.box--1{
+                position: absolute;
+                left: 0;
+                top:0;
                 background-image:url(../images/portfolio-img-1.jpg);
                 background-size: cover;
                 color:white;
             }
             &.box--3{
+                position: absolute;
+                left: 0;
+                bottom: 0;
                 background-image:url(../images/portfolio-img-3.jpg);
                 background-size: cover;
                 color:white;
-            
+                &:after{
+                    background-image:url(../images/portfolio-img-3.jpg) ;
+                    background-size: cover;
+                }
             }
-            
             &.box--2{
                 position:absolute;
                 right:0;
@@ -71,7 +112,10 @@
                 background-image:url(../images/portfolio-img-2.jpg);
                 background-size: cover;
                 color:white;
-            
+                &:after{
+                    background-image:url(../images/portfolio-img-2.jpg) ;
+                    background-size: cover;
+                }
             }
             &.box--4{
                 position:absolute;
@@ -80,11 +124,12 @@
                 background-image:url(../images/portfolio-img-4.jpg);
                 background-size: cover;
                 color:white;
-            }
-            
-        }
-        
-    }
-    
+                &:after{
+                    background-image:url(../images/portfolio-img-4.jpg) ;
+                    background-size: cover;
+                }
+            }   
+        }   
+    }    
 }
 
