--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,8 +44,6 @@ html,body {
     top:20rem;
     left:0;
     padding:2rem;
-    //may need to refactor here
-
     @media screen and (min-height:350px) and (max-height:500px) {
         top:6rem;
     }
@@ -53,8 +51,7 @@ html,body {
 .presentation{
     font-size:1.8rem;
     color:$color-gray;
-    animation: slideLeft .8s ease-in-out;
-
+    animation: slideDown .9s ease-in-out .2s both;
     #title__heading{
          margin-left:.5rem;
     }
@@ -75,7 +72,6 @@ html,body {
     border-radius:.3rem;
     }
 /* Main Content */
-
 .profile {
     width:200px;
     height:200px;
@@ -83,7 +79,7 @@ html,body {
     border-radius: 80px;
 }
 .image img{
-    animation: appear 1s ease-in-out;
+    animation: appear 1s ease-in-out .3s both;
 }
 
 .icons{
@@ -95,23 +91,42 @@ html,body {
         i{
             margin-left:2rem;
             color:$overlay-color;
-            &.fa-instagram:hover{
-                background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-                -webkit-background-clip: text;
-                background-clip: text;
-                -webkit-text-fill-color: transparent;
-                
+            &.fa-instagram{
+                animation: instaMoveLeft 1s ease-in-out 1s both;
+                &:hover{
+                    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+                    -webkit-background-clip: text;
+                    background-clip: text;
+                    -webkit-text-fill-color: transparent;
+                    
+                }
+
             }
-            &.fa-facebook:hover{
-                color:#3B5998;   
-            }
-            &.fa-linkedin:hover{
-                color:#04669A;
+            &.fa-facebook{
+                animation: faceBMoveLeft 1s ease-in-out .3s both;
+                &.fa-facebook:hover{
+                    color:#3B5998;   
+                }
+
             }
             
-            &.fa-github:hover{
-                color:black;
+            &.fa-linkedin{
+                animation: linkMoveLeft 1s ease-in-out .6s both;
+                &.fa-linkedin:hover{
+                    color:#04669A;
+                }
+
             }
+            
+            &.fa-github{
+                animation: gitMoveLeft 1s ease-in-out .9s both;
+                &:hover{
+                    color:black;
+                }
+
+            }
+            
+            
         }
     }
 }
